doubly_linked_lists task 6

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@ doubly_linked_lists/b
 doubly_linked_lists/c
 doubly_linked_lists/d
 doubly_linked_lists/e
+doubly_linked_lists/h
+doubly_linked_lists/i
